--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -11,6 +11,7 @@
 
 .van-popover .sub-item a:hover
 .gg-carousel .more
+.rcmd-box-wrap .change-btn:hover
 	background-color var(--c-hover)
 
 .gg-carousel .gg-icon
@@ -41,6 +42,9 @@
 .manga-panel .tab-switch .tab-switch-item.on
 .manga-panel .tab-switch .tab-switch-item:hover
 	color var(--c-accent) !important
+
+.rcmd-box-wrap .change-btn
+	border-color var(--c-border) !important
 
 .time-line .tab-switch .tab-switch-item.on
 .manga-panel .tab-switch .tab-switch-item.on
