--- a/bilibili-lite/src/manga/detail.styl
+++ b/bilibili-lite/src/manga/detail.styl
@@ -13,6 +13,7 @@
 .list-data .list-item:hover
 .discount-hinter
 .purchase-panel .action-buttons button.action-button.selected
+.episode-list-component .episode-list .list-header .header-item.selected
   background-color var(--c-hover) !important
 
 .container .back-to-content .line
