--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -205,6 +205,7 @@ table
 .bili-switcher
 .bl-switch
 .check-radio-v2-2-container
+.next-button .switch-button
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   transition all 0.3s ease-in-out
@@ -215,6 +216,7 @@ table
   &.bl-switch-checked
   &.checked
   &.check-radio-v2-2-container-active
+  &.on
     border-color var(--c-accent) !important
     background-color var(--c-accent) !important
 
