--- a/bilibili-lite/src/show/base.styl
+++ b/bilibili-lite/src/show/base.styl
@@ -9,6 +9,7 @@
 .project-info table .project-content .content-right .ticket-type span
 .header .right li.order .icons
 .header .right li.order:after
+.nav-header-wrapper .nav-header .nav-header-logo-sub
   display none !important
 
 .nav-header-wrapper
