--- a/bilibili-lite/src/video/danmaku.styl
+++ b/bilibili-lite/src/video/danmaku.styl
@@ -12,6 +12,7 @@
 .player-auxiliary-area .player-auxiliary-bscrollbar .bscroll-indicator
 	background-color var(--c-scroll) !important
 
+.player-auxiliary
 .player-auxiliary-area
 .bui-collapse .bui-collapse-header
 .player-auxiliary-area .player-auxiliary-filter
