--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -85,6 +85,7 @@ em:not(.icon)
 .video-card .weak-tag
 .bangumi-item .cover-wrapper .corner-tag.badge_1
 .up-info .up-info_right .name .live-status
+.popup-card .info .style-item
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -224,6 +225,7 @@ textarea
 .pwp-modal-mask .pwp-modal-wrapper
 .month-selector .month-info .month-list
 .danmaku-menu
+.bui-dropdown .bui-dropdown-items
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -249,7 +251,11 @@ textarea
 .bangumi-options .opt-list li.disabled
 .el-dropdown-menu__item:focus
 .el-dropdown-menu__item:not(.is-disabled):hover
+.bui-dropdown .bui-dropdown-items .bui-dropdown-item:hover
   background-color var(--c-hover) !important
+
+.bui-dropdown .bui-dropdown-items .bui-dropdown-item
+  background-color transparent !important
 
 .van-popper .popper__arrow
   border-width 0
