--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -256,6 +256,10 @@ button
 .tag-channel-pane .channel-btns .is-subs
 .common-modal-container .common-modal-content .common-modal-foot .footer-main>div div:nth-child(2)
 .upload-step-3-container-v2 .upload-3-v2-success-go-url a
+.bpx-player-auxiliary .bpx-player-dm-container .dm-info-row .dm-info-block-btn
+.bpx-player-auxiliary .bpx-player-dm-container .dm-info-row .dm-info-protect-btn
+.bpx-player-auxiliary .bpx-player-dm-container .dm-info-row .dm-info-recall-btn
+.bpx-player-auxiliary .bpx-player-dm-container .dm-info-row .dm-info-report-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
