--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -27,7 +27,9 @@
 .bb-comment .comment-list .list-item .con .vote-container
 .bb-comment .comment-list .list-item .info .reply-tags span
 .comment-bilibili-fold .comment-list .list-item .info .reply-tags span
-	background-color var(--c-hover)
+.bb-comment .comment-list .list-item .info .reply-tags span
+.comment-bilibili-fold .comment-list .list-item .info .reply-tags span
+	background-color var(--c-hover) !important
 
 #comment
 .page-comment
