--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -23,6 +23,9 @@
 .bui-swiper-wrap .bui-swiper-item .bui-swiper-text
 .bilibili-player-hover-items .hover-item .bg
 .mini-header__content.mini-header--login
+.bpx-player-sending-bar
+.bpx-docker-minor
+.bpx-player-auxiliary .bpx-player-dm-btn-footer
 	background-color var(--c-background) !important
 
 .multi-page .cur-list .list-box li.on
@@ -41,6 +44,9 @@
 .follow-dialog-wrap .follow-dialog-window .content .group-list ul .follow-group-mask
 .bui-swiper-wrap .bui-swiper-list.bui-swiper-border .bui-swiper-img
 .bilibili-player-hover-items .hover-item .cover
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-date
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-dm
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-time
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
@@ -56,6 +62,18 @@
 .player-module #bofqi.stardust-player
 .bilibili-player-video-bottom-area .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .input-group input
+.bpx-player-auxiliary .bpx-player-collapse .bui-collapse-body
+.bpx-player-auxiliary .bpx-player-adv-danmaku
+.bpx-player-auxiliary .bpx-player-setting
+.bpx-player-auxiliary .bpx-player-dm-management
+.bpx-player-auxiliary .bpx-player-dm-function
+.bpx-player-auxiliary .bpx-player-dm-wrap
+.bpx-player-auxiliary .bpx-player-dm-wrap-child
+.bpx-player-auxiliary .bpx-player-dm-btn-history
+.bpx-player-auxiliary .bpx-player-filter
+.bpx-player-sending-bar .bpx-player-video-inputbar
+.bpx-player-container[data-screen=full] .bpx-player-sending-bar
+.bpx-player-container[data-screen=web] .bpx-player-sending-bar
 	background-color transparent !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
@@ -66,6 +84,8 @@
 .s_tag .btn-add:hover span
 .bui-swiper-wrap .bui-swiper-item.bui-swiper-item-active .bui-swiper-text
 .members-info .avatar .attention
+.squirtle-controller.squirtle-pgc .squirtle-progress-timeline
+.bpx-player-mini-warp .bpx-player-mini-progress-tempo
 	background-color var(--c-accent) !important
 
 .video-info .video-title .tit
@@ -114,6 +134,11 @@ ul.star-wrapper li i
 .step-success .success-msg
 .main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-subtitle
 .main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-count
+.bui-dropdown .bui-dropdown-items .bui-dropdown-item
+.bpx-player-auxiliary .bpx-player-dm-btn-history
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-date
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-dm
+.bpx-player-auxiliary .bpx-player-dm-function .bpx-player-dm-btn-time
 	color var(--c-text) !important
 
 .bilibili-player-video-wrap a
@@ -178,6 +203,10 @@ ul.star-wrapper li i.icon-star-full
 .up-info .up-info_right .name .message:hover
 .up-info .up-info_right .name .message:hover i
 .main-container .recom-wrapper .recom-list .recom-item .info-wrapper .video-title:hover
+.bui-dropdown .bui-dropdown-items .bui-dropdown-item:hover
+.bpx-player-sending-bar .bpx-player-video-inputbar .bpx-player-dm-hint a:hover
+.bilibili-player-bangumi-ending-panel.bilibili-player-ending-panel .bilibili-player-ending-panel-box-functions .bilibili-player-pgcinfo-spans .coin.active
+.bilibili-player-bangumi-ending-panel.bilibili-player-ending-panel .bilibili-player-ending-panel-box-functions .bilibili-player-pgcinfo-spans .like.active
 	color var(--c-accent) !important
 
 .bilibili-player-feedback
@@ -189,6 +218,7 @@ ul.star-wrapper li i.icon-star-full
 .pwp-modal-header
 .bui-swiper-wrap .bui-swiper-list.bui-swiper-border .bui-swiper-img
 .bilibili-player-hover-items .hover-item .cover
+.bpx-player-sending-bar .bpx-player-video-inputbar-wrap
 	border-color var(--c-border) !important
 
 .follow-dialog-wrap .follow-dialog-window .content .group-list .add-group .input-group
@@ -207,6 +237,7 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player
 .bui-swiper-wrap .bui-swiper-list.bui-swiper-border .bui-swiper-img
 .bui-swiper-wrap .bui-swiper-item .bui-swiper-text
+.bpx-player-container
 	box-shadow none
 
 #comment_module
@@ -234,6 +265,9 @@ ul.star-wrapper li i.icon-star-full
 .video-page-operator-card .info .count.up
 	width auto
 
+.bpx-player-sending-bar .bpx-player-video-inputbar
+	width 600px
+
 #bofqi
 	height 100vh
 
@@ -242,6 +276,8 @@ ul.star-wrapper li i.icon-star-full
 
 .bilibili-player-video-danmaku-root .bp-svgicon svg
 .bui-swiper-wrap .bui-swiper-pre svg
+.bpx-player-sending-bar .bpx-player-video-inputbar .bpx-player-dm-hint a
+.bpx-player-sending-bar .bpx-player-video-btn-dm
 	fill var(--c-text)
 
 .bui-switch .bui-dot span svg
@@ -266,6 +302,11 @@ ul.star-wrapper li i.icon-star-full
 .bilibili-player-video-btn-fullscreen:hover .bp-svgicon svg .st0
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div:hover .bp-svgicon svg
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display .grade .bp-svgicon svg g path:last-child
+.bui-dropdown .bui-dropdown-wrap.bui-dropdown-unfold .bui-dropdown-icon
+.bpx-player-sending-bar .bpx-player-video-btn-dm:hover
+.bpx-player-sending-bar .bpx-player-video-inputbar .bpx-player-dm-hint a:hover
+.bilibili-player-ending-panel-box-functions .bilibili-player-pgcinfo-spans>div.active .bp-svgicon
+.bilibili-player-ending-panel-box-functions .bilibili-player-pgcinfo-spans>div.active:hover .bp-svgicon
 	fill var(--c-accent) !important
 
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .bilibili-player-grade-spans .grade .bp-svgicon svg path
