--- a/bilibili-lite/src/video/media.styl
+++ b/bilibili-lite/src/video/media.styl
@@ -11,6 +11,7 @@
 .sort-type-wrp ul
 .spread-module .num
 .review-feed-wrapper
+.popup-card
   background-color var(--c-background) !important
 
 .share-module
@@ -21,6 +22,7 @@
 .section-item
 .media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span
 .media-tab-module-wrp .media-tab-module-content .sl-ep-nav .slider-contro span.disabled:hover
+.rank-wrp .more:hover
   background-color var(--c-hover) !important
 
 .media-info-count .media-info-count-item em
@@ -91,6 +93,7 @@
 .review-list-wrp li
 .review-feed-item
 .media-tab-module-wrp .media-tab-module-content .sl-ep-nav .mode-select
+.rank-wrp .more
   border-color var(--c-border) !important
 
 .media-info-wrp .media-info-content .media-info-inner .media-info-r .media-info-title .media-tag
@@ -109,6 +112,7 @@
   border 0 !important
 
 .media-info-card
+.popup-card
   box-shadow none
 
 .btn-pay-wrapper.is-vip a
