--- a/bilibili-lite/src/video/index.styl
+++ b/bilibili-lite/src/video/index.styl
@@ -9,6 +9,7 @@ url-prefix("https://www.bilibili.com/cheese/play/") {
 	@import 'note'
 	@import 'danmaku'
 }
-@-moz-document url-prefix("https://www.bilibili.com/bangumi/media/") {
+@-moz-document url-prefix("https://www.bilibili.com/bangumi/media/"),
+url-prefix("https://www.bilibili.com/movie/") {
 	@import 'media'
 }
